--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp-tsc": "^0.9.4"
   },
   "dependencies": {
-    "gulp-typedoc": "~1.1.0"
+    "gulp-typedoc": "~1.1.0",
+    "gulp-uglify": "~1.2.0",
+    "through2": "~0.6.5"
   }
 }
