--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "homepage": "https://github.com/SplitmediaLabsLimited/xui",
   "devDependencies": {
-    "event-stream": "^3.3.1",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
-    "gulp-tsc": "^0.9.4"
+    "gulp-tsc": "^0.9.4",
+    "merge2": "^0.3.5"
   },
   "dependencies": {
     "gulp-typedoc": "~1.1.0",
