--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
+    "gulp-debug": "^2.0.1",
     "gulp-tsc": "^0.9.4",
     "merge2": "^0.3.5"
   },
