--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/SplitmediaLabsLimited/xui",
   "devDependencies": {
+    "browser-sync": "^2.7.7",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-tsc": "^0.9.4",
