--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "merge2": "^0.3.5"
   },
   "dependencies": {
+    "browser-sync": "^2.7.7",
     "gulp-typedoc": "~1.1.0",
     "gulp-uglify": "~1.2.0",
     "through2": "~0.6.5"
