Update bower json - include es6-promise.d.ts as dependency - ignore docs, examples, lib, and src

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,13 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
-  ]
+    "docs",
+    "examples",
+    "lib",
+    "src",
+    "./*.*"
+  ],
+  "dependencies": {
+    "es6-promise.d": "https://github.com/borisyankov/DefinitelyTyped/blob/master/es6-promise/es6-promise.d.ts"
+  }
 }
